--- a/histroy/diablo/itemsMaxAttribute.html
+++ b/histroy/diablo/itemsMaxAttribute.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+ï»¿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>D3·À¾ßÊôÐÔÉÏÏÞ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>D3é˜²å…·å±žæ€§ä¸Šé™</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <script src="lib/jquery.js" type="text/javascript"></script>
 <script src="js/default.js" type="text/javascript"></script>
@@ -16,54 +16,54 @@
 
 <body class="indexMain">
 <div class="classes">
-	<span>Ñ¡ÔñÖ°Òµ£º</span>
-	<input name="classes" type="radio" value="bar" />Ò°ÂùÈË
-    <input name="classes" type="radio" value="dh" />¶ñÄ§ÁÔÊÖ
-    <input name="classes" type="radio" value="monk" />ÎäÉ®
-    <input name="classes" type="radio" value="wd" />Î×Ò½
-    <input name="classes" type="radio" value="wizard" />ÃØÊõÊ¦
-    <input name="classes" type="radio" value="all" checked="checked" />ËùÓÐÖ°Òµ
+	<span>é€‰æ‹©èŒä¸šï¼š</span>
+	<input name="classes" type="radio" value="bar" />é‡Žè›®äºº
+    <input name="classes" type="radio" value="dh" />æ¶é­”çŒŽæ‰‹
+    <input name="classes" type="radio" value="monk" />æ­¦åƒ§
+    <input name="classes" type="radio" value="wd" />å·«åŒ»
+    <input name="classes" type="radio" value="wizard" />ç§˜æœ¯å¸ˆ
+    <input name="classes" type="radio" value="all" checked="checked" />æ‰€æœ‰èŒä¸š
 </div>
 <table class="diabloTable" id="maxItemAttributes">
 	<thead>
     	<tr>
-        	<th rowspan="2">×°±¸ÊôÐÔ<br/>ÉÏÏÞ±í</th>
-        	<th colspan="4" class="head">Í·²¿</th>
-            <th colspan="2" class="torso">ÉíÇû</th>
-            <th colspan="2" class="waist">Ñü²¿</th>
-            <th>ÍÈ²¿</th>
-            <th>½Å²¿</th>
-            <th>¼ç°ò</th>
-            <th>ÊÖÕÆ</th>
-            <th>ÊÖÍó</th>
-            <th colspan="2" class="jewelry">ÊÎÆ·</th>
-            <th colspan="4" class="off-hand">¸±ÊÖ</th>
+        	<th rowspan="2">è£…å¤‡å±žæ€§<br/>ä¸Šé™è¡¨</th>
+        	<th colspan="4" class="head">å¤´éƒ¨</th>
+            <th colspan="2" class="torso">èº«èº¯</th>
+            <th colspan="2" class="waist">è…°éƒ¨</th>
+            <th>è…¿éƒ¨</th>
+            <th>è„šéƒ¨</th>
+            <th>è‚©è†€</th>
+            <th>æ‰‹æŽŒ</th>
+            <th>æ‰‹è…•</th>
+            <th colspan="2" class="jewelry">é¥°å“</th>
+            <th colspan="4" class="off-hand">å‰¯æ‰‹</th>
         </tr>
     	<tr>
-        	<th>Í·¿ø</th>
-            <th class="limited monk">Á·ÆøÊ¯</th>
-            <th class="limited wd">Î×¶¾Ãæ¾ß</th>
-            <th class="limited wizard">ÃØÊõÃ±</th>
-            <th>ÐØ¼×</th>
-            <th class="limited dh">¶·Åñ</th>
-            <th>Ñü´ø</th>
-            <th class="limited bar">ÖØÐÍÑü´ø</th>
-            <th>¿ã×Ó</th>
-            <th>Ñ¥×Ó</th>
-            <th>»¤¼ç</th>
-            <th>ÊÖÌ×</th>
-            <th>»¤Íó</th>
-            <th>»¤Éí·û</th>
-            <th>½äÖ¸</th>
-            <th>¶ÜÅÆ</th>
-            <th class="limited wd">ÖäÎï</th>
-            <th class="limited wizard">·¨Æ÷</th>
-            <th class="limited dh">¼ýÍ²</th>
+        	<th>å¤´ç›”</th>
+            <th class="limited monk">ç»ƒæ°”çŸ³</th>
+            <th class="limited wd">å·«æ¯’é¢å…·</th>
+            <th class="limited wizard">ç§˜æœ¯å¸½</th>
+            <th>èƒ¸ç”²</th>
+            <th class="limited dh">æ–—ç¯·</th>
+            <th>è…°å¸¦</th>
+            <th class="limited bar">é‡åž‹è…°å¸¦</th>
+            <th>è£¤å­</th>
+            <th>é´å­</th>
+            <th>æŠ¤è‚©</th>
+            <th>æ‰‹å¥—</th>
+            <th>æŠ¤è…•</th>
+            <th>æŠ¤èº«ç¬¦</th>
+            <th>æˆ’æŒ‡</th>
+            <th>ç›¾ç‰Œ</th>
+            <th class="limited wd">å’’ç‰©</th>
+            <th class="limited wizard">æ³•å™¨</th>
+            <th class="limited dh">ç®­ç­’</th>
         </tr>
     </thead>
     <tbody>
     	<tr>
-        	<th>ÖÇÁ¦</th>
+        	<th>æ™ºåŠ›</th>
             <td class="important1">300</td>
             <td></td>
             <td></td>
@@ -85,7 +85,7 @@
             <td>178</td>
         </tr>
         <tr>
-        	<th>Ãô½Ý</th>
+        	<th>æ•æ·</th>
             <td>200</td>
             <td></td>
             <td></td>
@@ -107,7 +107,7 @@
             <td>178</td>
         </tr>
         <tr>
-        	<th>Á¦Á¿</th>
+        	<th>åŠ›é‡</th>
             <td>200</td>
             <td></td>
             <td></td>
@@ -129,7 +129,7 @@
             <td>178</td>
         </tr>
         <tr>
-        	<th>ÌåÁ¦</th>
+        	<th>ä½“åŠ›</th>
             <td>200</td>
             <td></td>
             <td></td>
@@ -151,7 +151,7 @@
             <td>178</td>
         </tr>
         <tr>
-        	<th>±©»÷¼¸ÂÊ</th>
+        	<th>æš´å‡»å‡ çŽ‡</th>
             <td class="important2">6%</td>
             <td>4.5%</td>
             <td>4.5%</td>
@@ -173,7 +173,7 @@
             <td class="important2">8.5%</td>
         </tr>
         <tr>
-        	<th>±©»÷ÉËº¦¼Ó³É</th>
+        	<th>æš´å‡»ä¼¤å®³åŠ æˆ</th>
             <td>--</td>
             <td>--</td>
             <td>--</td>
@@ -195,7 +195,7 @@
             <td>--</td>
         </tr>
         <tr>
-        	<th>¹¥ËÙ¼Ó³É</th>
+        	<th>æ”»é€ŸåŠ æˆ</th>
             <td>--</td>
             <td>--</td>
             <td>--</td>
@@ -217,7 +217,7 @@
             <td>15%</td>
         </tr>
         <tr>
-        	<th>¸½¼ÓÉËº¦</th>
+        	<th>é™„åŠ ä¼¤å®³</th>
             <td>--</td>
             <td>--</td>
             <td>--</td>
@@ -239,7 +239,7 @@
             <td>--</td>
         </tr>
         <tr>
-        	<th>È«ÔªËØ¿¹ÐÔ</th>
+        	<th>å…¨å…ƒç´ æŠ—æ€§</th>
             <td>80</td>
             <td></td>
             <td></td>
@@ -261,7 +261,7 @@
             <td>--</td>
         </tr>
         <tr>
-        	<th>µ¥ÔªËØ¿¹ÐÔ</th>
+        	<th>å•å…ƒç´ æŠ—æ€§</th>
             <td>60</td>
             <td></td>
             <td></td>
@@ -283,7 +283,7 @@
             <td>--</td>
         </tr>
         <tr>
-        	<th>ÉúÃüÌá¸ß</th>
+        	<th>ç”Ÿå‘½æé«˜</th>
             <td>12%</td>
             <td></td>
             <td></td>
@@ -305,7 +305,7 @@
             <td>9%</td>
         </tr>
         <tr>
-        	<th>Ã¿Ãë»Ø¸´ÑªÁ¿</th>
+        	<th>æ¯ç§’å›žå¤è¡€é‡</th>
             <td>342</td>
             <td></td>
             <td></td>
@@ -327,7 +327,7 @@
             <td>234</td>
         </tr>
         <tr>
-        	<th>»÷ÖÐ»Ø¸´ÑªÁ¿</th>
+        	<th>å‡»ä¸­å›žå¤è¡€é‡</th>
             <td>--</td>
             <td></td>
             <td></td>
@@ -349,7 +349,7 @@
             <td>--</td>
         </tr>
         <tr>
-        	<th>Ïâ¿×¸öÊý</th>
+        	<th>é•¶å­”ä¸ªæ•°</th>
             <td class="important2">1</td>
             <td class="important2">1</td>
             <td class="important2">1</td>
@@ -371,7 +371,7 @@
             <td>1</td>
         </tr>
         <tr>
-        	<th>»¤¼×Ôö¼Ó</th>
+        	<th>æŠ¤ç”²å¢žåŠ </th>
             <td>397</td>
             <td></td>
             <td></td>
@@ -393,7 +393,7 @@
             <td>--</td>
         </tr>
         <tr>
-        	<th>»ù´¡»¤¼×</th>
+        	<th>åŸºç¡€æŠ¤ç”²</th>
             <td>457</td>
             <td></td>
             <td></td>
@@ -415,7 +415,7 @@
             <td>--</td>
         </tr>
         <tr>
-        	<th>¸ñµ²¸ÅÂÊ/¸ñµ²Öµ</th>
+        	<th>æ ¼æŒ¡æ¦‚çŽ‡/æ ¼æŒ¡å€¼</th>
             <td>--</td>
             <td>--</td>
             <td>--</td>
@@ -437,7 +437,7 @@
             <td>--</td>
         </tr>
         <tr>
-        	<th>¸ñµ²¸ÅÂÊÌáÉý</th>
+        	<th>æ ¼æŒ¡æ¦‚çŽ‡æå‡</th>
             <td>--</td>
             <td>--</td>
             <td>--</td>
@@ -459,13 +459,13 @@
             <td>--</td>
         </tr>
         <tr>
-        	<th>ÄÜÁ¿ÉÏÏÞ</th>
+        	<th>èƒ½é‡ä¸Šé™</th>
             <td>--</td>
             <td>&nbsp;</td>
             <td>119</td>
             <td>15</td>
             <td>--</td>
-            <td>10½äÂÉ</td>
+            <td>10æˆ’å¾‹</td>
             <td>--</td>
             <td>&nbsp;</td>
             <td>--</td>
@@ -481,13 +481,13 @@
             <td>10</td>
         </tr>
         <tr>
-        	<th>ÄÜÁ¿»Ö¸´</th>
+        	<th>èƒ½é‡æ¢å¤</th>
             <td>--</td>
             <td>2.33</td>
             <td>11</td>
             <td>10</td>
             <td>--</td>
-            <td>1.17Ô÷ºÞ</td>
+            <td>1.17æ†Žæ¨</td>
             <td>--</td>
             <td>&nbsp;</td>
             <td>--</td>
@@ -503,7 +503,7 @@
             <td>1.17</td>
         </tr>
         <tr>
-        	<th>ÒÆ¶¯ËÙ¶È</th>
+        	<th>ç§»åŠ¨é€Ÿåº¦</th>
             <td>--</td>
             <td>--</td>
             <td>--</td>
@@ -525,7 +525,7 @@
             <td>--</td>
         </tr>
         <tr>
-        	<th>Ñ°Ä§</th>
+        	<th>å¯»é­”</th>
             <td>20</td>
             <td>18</td>
             <td>18</td>
@@ -547,7 +547,7 @@
             <td>18</td>
         </tr>
         <tr>
-        	<th>Ñ°½ð</th>
+        	<th>å¯»é‡‘</th>
             <td>25</td>
             <td>20</td>
             <td>20</td>
@@ -569,7 +569,7 @@
             <td>20</td>
         </tr>
         <tr>
-        	<th>½ð±Ò/ÑªÇòÊ°È¡¾àÀë</th>
+        	<th>é‡‘å¸/è¡€çƒæ‹¾å–è·ç¦»</th>
             <td>7</td>
             <td></td>
             <td></td>
@@ -591,7 +591,7 @@
             <td>--</td>
         </tr>
         <tr>
-        	<th>·´µ¯ÉËº¦</th>
+        	<th>åå¼¹ä¼¤å®³</th>
             <td>1454</td>
             <td></td>
             <td></td>
@@ -613,7 +613,7 @@
             <td>--</td>
         </tr>
         <tr>
-        	<th>¿Ø³¡¼¼ÄÜËõ¶Ì</th>
+        	<th>æŽ§åœºæŠ€èƒ½ç¼©çŸ­</th>
             <td>14%</td>
             <td></td>
             <td></td>
@@ -635,7 +635,7 @@
             <td>--</td>
         </tr>
         <tr>
-        	<th>½üÕ½ÉËº¦½µµÍ</th>
+        	<th>è¿‘æˆ˜ä¼¤å®³é™ä½Ž</th>
             <td>--</td>
             <td></td>
             <td></td>
@@ -657,7 +657,7 @@
             <td>--</td>
         </tr>
         <tr>
-        	<th>Ô¶³ÌÉËº¦½µµÍ</th>
+        	<th>è¿œç¨‹ä¼¤å®³é™ä½Ž</th>
             <td>--</td>
             <td></td>
             <td></td>
@@ -679,7 +679,7 @@
             <td>--</td>
         </tr>
         <tr>
-        	<th>¾«Ó¢¹ÖÉËº¦½µµÍ</th>
+        	<th>ç²¾è‹±æ€ªä¼¤å®³é™ä½Ž</th>
             <td>--</td>
             <td></td>
             <td></td>
@@ -701,7 +701,7 @@
             <td>--</td>
         </tr>
         <tr>
-        	<th>¶Ô¾«Ó¢¹ÖÉËº¦Ìá¸ß</th>
+        	<th>å¯¹ç²¾è‹±æ€ªä¼¤å®³æé«˜</th>
             <td>--</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
@@ -723,51 +723,51 @@
             <td>6%</td>
         </tr>
         <tr>
-        	<th>Ôì³ÉÌØÊâÐ§¹û</th>
-            <td>5.1%¿Ö¾å</td>
+        	<th>é€ æˆç‰¹æ®Šæ•ˆæžœ</th>
+            <td>5.1%ææƒ§</td>
             <td></td>
             <td></td>
             <td></td>
             <td>--</td>
             <td></td>
-            <td>5.1%±ù¶³</td>
+            <td>5.1%å†°å†»</td>
             <td></td>
-            <td>5.1%¼õËÙ</td>
-            <td>5.1%¶¨Éí</td>
-            <td>5.1%±ù¶³</td>
-            <td>5.1%»èÃÔ</td>
-            <td>5.1%»÷ÍË</td>
-            <td>5.1%»èÃÔ</td>
+            <td>5.1%å‡é€Ÿ</td>
+            <td>5.1%å®šèº«</td>
+            <td>5.1%å†°å†»</td>
+            <td>5.1%æ˜è¿·</td>
+            <td>5.1%å‡»é€€</td>
+            <td>5.1%æ˜è¿·</td>
             <td>--</td>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-            <td>--</td>
-        </tr>
-        <tr>
-        	<th>µÈ¼¶ÐèÇó½µµÍ</th>
-            <td>18</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>18</td>
-            <td></td>
-            <td>18</td>
-            <td></td>
-            <td>18</td>
-            <td>18</td>
-            <td>18</td>
-            <td>18</td>
-            <td>18</td>
-            <td>18</td>
-            <td>18</td>
             <td>--</td>
             <td>--</td>
             <td>--</td>
             <td>--</td>
         </tr>
         <tr>
-        	<th>×î¸ßÎïÆ·µÈ¼¶</th>
+        	<th>ç­‰çº§éœ€æ±‚é™ä½Ž</th>
+            <td>18</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>18</td>
+            <td></td>
+            <td>18</td>
+            <td></td>
+            <td>18</td>
+            <td>18</td>
+            <td>18</td>
+            <td>18</td>
+            <td>18</td>
+            <td>18</td>
+            <td>18</td>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+            <td>--</td>
+        </tr>
+        <tr>
+        	<th>æœ€é«˜ç‰©å“ç­‰çº§</th>
             <td>ilv.63</td>
             <td>ilv.62</td>
             <td>ilv.62</td>
