--- a/histroy/virtualKeyboard/index.html
+++ b/histroy/virtualKeyboard/index.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+ï»¿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" />
-<title>JSÐéÄâ¼üÅÌ</title>
+<title>JSè™šæ‹Ÿé”®ç›˜</title>
 <link href="css/virtualKeyboard.css" rel="stylesheet" type="text/css" />
 <script src="lib/jquery.js" type="text/javascript"></script>
 <script src="js/virtualKeyboard.js" type="text/javascript"></script>
 <script type="text/javascript">
 window.onload = function(){
 	virtualKeyboard("searchBar");
-	$("#searchForm .searchButton").click(function(){			//ÆÕÍ¨°´¼üÊäÈë¹¦ÄÜ
-		alert("ÄúÊäÈëµÄÄÚÈÝÊÇ£º" + $("#searchForm #searchBar").val());
+	$("#searchForm .searchButton").click(function(){			//æ™®é€šæŒ‰é”®è¾“å…¥åŠŸèƒ½
+		alert("æ‚¨è¾“å…¥çš„å†…å®¹æ˜¯ï¼š" + $("#searchForm #searchBar").val());
 	});
 }
 </script>
@@ -35,8 +35,8 @@ window.onload = function(){
     <div class="inputButton" id="inputButton">0</div>
     <div class="inputButton" id="inputButton">-</div>
     <div class="inputButton" id="inputButton">=</div>
-    <div class="inputButton backButton" id="backButton"><!--ÍË¸ñ¼ü--></div>
-    <div class="inputButton tabButton line2" id="tabButton"><!--Tab¼ü--></div>
+    <div class="inputButton backButton" id="backButton"><!--é€€æ ¼é”®--></div>
+    <div class="inputButton tabButton line2" id="tabButton"><!--Tabé”®--></div>
     <div class="inputButton" id="inputButton">q</div>
     <div class="inputButton" id="inputButton">w</div>
     <div class="inputButton" id="inputButton">e</div>
@@ -50,7 +50,7 @@ window.onload = function(){
     <div class="inputButton" id="inputButton">[</div>
     <div class="inputButton" id="inputButton">]</div>
     <div class="inputButton inputButton70" id="inputButton">\</div>
-    <div class="inputButton capsLockButton line3" id="capsLockButton"><!--´óÐ¡Ð´ÇÐ»»¼ü--></div>
+    <div class="inputButton capsLockButton line3" id="capsLockButton"><!--å¤§å°å†™åˆ‡æ¢é”®--></div>
     <div class="inputButton" id="inputButton">a</div>
     <div class="inputButton" id="inputButton">s</div>
     <div class="inputButton" id="inputButton">d</div>
@@ -62,8 +62,8 @@ window.onload = function(){
     <div class="inputButton" id="inputButton">l</div>
     <div class="inputButton" id="inputButton">;</div>
     <div class="inputButton" id="inputButton">'</div>
-    <div class="inputButton enterButton" id="enterButton"><!--»Ø³µ¼ü--></div>
-    <div class="inputButton leftShiftButton line4" id="leftShiftButton"><!--×ó²àShift¼ü--></div>
+    <div class="inputButton enterButton" id="enterButton"><!--å›žè½¦é”®--></div>
+    <div class="inputButton leftShiftButton line4" id="leftShiftButton"><!--å·¦ä¾§Shifté”®--></div>
     <div class="inputButton" id="inputButton">z</div>
     <div class="inputButton" id="inputButton">x</div>
     <div class="inputButton" id="inputButton">c</div>
@@ -74,15 +74,15 @@ window.onload = function(){
     <div class="inputButton" id="inputButton">,</div>
     <div class="inputButton" id="inputButton">.</div>
     <div class="inputButton" id="inputButton">/</div>
-    <div class="inputButton rightShiftButton" id="rightShiftButton"><!--ÓÒ²àShift¼ü--></div>
-    <div class="inputButton ctrlButton line5" id="ctrlButton"><!--×ó²àCtrl¼ü--></div>
+    <div class="inputButton rightShiftButton" id="rightShiftButton"><!--å³ä¾§Shifté”®--></div>
+    <div class="inputButton ctrlButton line5" id="ctrlButton"><!--å·¦ä¾§Ctrlé”®--></div>
     <div class="inputButton" id="inputButton"></div>
-    <div class="inputButton altButton" id="altButton"><!--×ó²àAlt¼ü--></div>
-    <div class="inputButton spaceButton" id="spaceButton"><!--¿Õ¸ñ¼ü--></div>
-    <div class="inputButton altButton" id="altButton"><!--ÓÒ²àAlt¼ü--></div>
+    <div class="inputButton altButton" id="altButton"><!--å·¦ä¾§Alté”®--></div>
+    <div class="inputButton spaceButton" id="spaceButton"><!--ç©ºæ ¼é”®--></div>
+    <div class="inputButton altButton" id="altButton"><!--å³ä¾§Alté”®--></div>
     <div class="inputButton" id="inputButton"></div>
-    <div class="inputButton ctrlButton" id="ctrlButton"><!--ÓÒ²àCtrl¼ü--></div>
-    <div class="inputButton delButton" id="delButton"><!--Del¼ü--></div>
+    <div class="inputButton ctrlButton" id="ctrlButton"><!--å³ä¾§Ctrlé”®--></div>
+    <div class="inputButton delButton" id="delButton"><!--Delé”®--></div>
 </div>
 
 <div id="test" style="color:#FFF;"></div>
